Fixed navbar not showing up on screen sizes other than mobile

--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -67,9 +67,7 @@ body {
     .col-12 {width: 100%;}
 }
 
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
-    .topnav {
+.topnav {
       overflow: hidden;
       background-color: #333;
     }
@@ -92,6 +90,10 @@ body {
     .topnav .icon {
         display: none;
     }
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    
     
     .topnav a {
         display: none;
@@ -189,7 +191,7 @@ body {
     h1 {
     text-align: center;
     position: absolute;
-    top: 30%;
+    top: 50%;
     margin-left: 20%;
     margin-right: 20%;
 }
@@ -210,13 +212,13 @@ body {
     h1 {
     text-align: center;
     position: absolute;
-    top: 30%;
+    top: 50%;
     margin-left: 30%;
     margin-right: 30%;
 }
 }
 
-/* Global CSS code */
+/* */
 #background-image {
    max-width: 100%;
     height: auto;
